# adbenchmark

./: CMakeLists.txt  README.md
ReverseMode/: CMakeLists.txt
ReverseMode/adbench/: ba.h  header.h
ReverseMode/ba/: CMakeLists.txt  ba-opt.ll  ba-raw.ll  ba-unopt.ll  ba.cpp  ba.cu  cuda  cuda.sh  results.json
ReverseMode/fft/: fft-opt.ll  fft-raw.ll  fft-unopt.ll  results.txt
ReverseMode/gmm/: gmm-opt.ll  gmm-raw.ll  gmm-unopt.ll
ReverseMode/hand/: hand-opt.ll  hand-raw.ll  results.json
ReverseMode/logsumexp/: logsumexp-opt.ll  results.txt
ReverseMode/lstm/: lstm-opt.ll  lstm-raw.ll  results.json
ReverseMode/matdescent/: matdescent-opt.ll  results.txt
ReverseMode/nn/: nn-opt.ll  results.txt
ReverseMode/ode/: ode-adept-unopt.ll  ode-enzyme.ll  ode-opt.ll  ode-raw.ll  ode-unopt.ll  results.txt
ReverseMode/ode-const/: ode-adept-unopt.ll  ode-enzyme.ll  ode-opt.ll  ode-raw.ll  ode-unopt.ll  results.txt
ReverseMode/ode-real/: ode-opt.ll  ode-raw.ll  results.txt
ReverseMode/taylorlog/: results.txt  taylorlog-opt.ll  taylorlog-raw.ll
