# Run regression and unit tests
 

# add_subdirectory(nn)
# add_subdirectory(taylorlog)
# add_subdirectory(logsumexp)
# add_subdirectory(matdescent)
# add_subdirectory(ode)
# add_subdirectory(ode-const)
# add_subdirectory(ode-real)
# add_subdirectory(fft)

#add_subdirectory(gmm)
add_subdirectory(ba)
#add_subdirectory(hand)
#add_subdirectory(lstm)

# add_subdirectory(library)
